# NeuroPD

./: .env.example  .gitignore  AGENTS.md  AI_USAGE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: harmonization.yaml  project.yaml
configs/data/: ds002778.yaml  ds007526.yaml
configs/experiments/: external_a_to_b.yaml  external_b_to_a.yaml  internal_baseline.yaml
configs/features/: interpretable.yaml
configs/preprocessing/: conservative.yaml  sensitivity.yaml
dashboard/: app.py
docs/: data_dictionary.md  data_provenance.md  dataset_audit.md  feature_dictionary.md  internal_baselines.md  limitations.md  preprocessing_qc.md  research_log.md
docs/decisions/: 0000-template.md  0001-cohort-roles.md  0002-eye-condition-verification.md  0003-environment-uv-python311.md  0004-ds002778-line-frequency-notch.md  0005-preprocessing-pipeline.md  0006-feature-extraction.md  0007-internal-cv-and-primary-metric.md
docs/neuroscience_explanations/: README.md
scripts/: audit_datasets.py  download_openneuro.py  evaluate_external.py  extract_features.py  fetch_metadata.py  generate_report.py  preprocess.py  qc_report.py  train.py
src/neuropd/: __init__.py  cli.py  config.py  logging.py  provenance.py
src/neuropd/data/: __init__.py  audit.py  bids.py  loaders.py  openneuro.py  regions.py  schemas.py  splits.py
src/neuropd/evaluation/: __init__.py  bootstrap.py  metrics.py  subgroup.py  transfer.py
src/neuropd/features/: __init__.py  aggregate.py  complexity.py  connectivity.py  matrix.py  spectral.py
src/neuropd/modeling/: __init__.py  baselines.py  calibration.py  explainability.py  pipeline.py  tuning.py
src/neuropd/preprocessing/: __init__.py  artifacts.py  channels.py  pipeline.py  quality.py
src/neuropd/visualization/: __init__.py  connectivity.py  performance.py  signals.py  topomaps.py
tests/: conftest.py  test_audit.py  test_features.py  test_metrics.py  test_modeling.py  test_no_leakage.py  test_preprocessing.py  test_regions.py  test_smoke_pipeline.py  test_splits.py
