[project]
name = "neuropd"
version = "0.0.0"
description = "Cross-dataset validation of explainable resting-state EEG biomarkers for Parkinson's disease."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Kaleb Rodriguez" }]
keywords = ["eeg", "parkinsons-disease", "biomarkers", "reproducibility", "mne", "neuroscience"]

# Core scientific stack (spec Section 9). Deep-learning libraries are intentionally
# excluded from the initial scope; the contribution is generalization, not model size.
dependencies = [
    "mne>=1.6",
    "mne-bids>=0.14",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "streamlit>=1.33",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
neuropd = "neuropd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuropd"]

[tool.uv]
# Keep dev tooling available in the default environment for reproducible CI/lint/test.
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["neuropd"]

[tool.mypy]
python_version = "3.11"
packages = ["neuropd"]
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "integration: end-to-end pipeline tests on synthetic/sampled data",
    "slow: tests that take a long time to run",
]

[tool.coverage.run]
branch = true
source = ["neuropd"]
